test/fail/invalid-persistent-function1.mo
import Prim "mo:prim";

persistent actor {
  let x = persistent func() {};
}
